[tool.poetry]
name = "delta"
version = "4.6"
description = "A multipurpose discord bot for me and my friends made with pycord"
authors = ["Tibor309 <<tibormercs8@gmail.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.4"
praw = "^7.4.0"
PyNaCl = "^1.4.0"
py-cpuinfo = "^8.0.0"
discord-together = "^1.2.6"
psutil = "^5.9.1"
python-dotenv = "^0.20.0"
youtube_dl = "^2021.12.17"
"discord.py" = "1.7.3"
discord = "1.7.3"
py-cord = "2.1.1"
requests = "^2.28.1"
ffmpeg = "^1.4"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
